# componentQt_DB

./: .gitignore  CMakeLists.txt  aux_class.cpp  aux_class.h  aux_table.cpp  aux_table.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  types.cpp  types.h
databaseSQLite/: CMakeLists.txt  databaseAbstract.cpp  databaseSQlite.cpp  databaseTypes.cpp  versionData.cpp
databaseSQLite/include/databaseSQLite/: databaseAbstract.h  databaseSQlite.h  databaseTypes.h  versionData.h
